# tg_budget

./: .dockerignore  .gitignore  Makefile  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml
Scripts/: run.py
app/: budget.py  constants.py  engine.py  exceptoions.py  tg_service.py  utils.py
app/accountant/: base.py  constants.py  enums.py  handlers.py  messages.py  registry.py  report.py
app/accountant/handlers/: __init__.py  balances.py  base.py  budget_items.py  categories.py  common.py  debts.py  entries.py  fonds.py  reports.py  (+1 more)
app/core/: config.py  logger.py
app/db_service/: __init__.py  enums.py  models.py  repository.py  schemas.py  session.py
app/rates_service/: __init__.py  base.py
app/redis_queue/: base.py  config.py
app/scheduler/: __init__.py  common.py  jobs.py  runners.py
app/schemas/: telegram.py
app/tg_service/: __init__.py  api.py  btn_labels.py  client.py  editor.py  enums.py  schemas.py
logs/: app.log.2024-05-12  app.log.2024-05-19  app.log.2024-05-20
migrations/: env.py
migrations/versions/: 2025_02_14_3d3b52c1fbe7_initial.py  2025_02_14_68dccc47b0f9_valutes.py  2025_02_14_a58f8b845512_entry.py  2025_02_14_ad5e7955979f_constraint.py  2025_02_14_dc8eda6e2b4f_user_state.py  2025_02_15_0539-cfc3de425b5e_rates.py  2025_07_14_1819-0870a330369a_balances.py  2025_09_09_1303-e8c14dc48a79_fonds_debts.py  7031e3ac3e61_language_code.py  79c508173937_tg_message.py  80d73005beaa_unique_budget_item.py  a58f8b845512_entry.py  ad5e7955979f_constraint.py  dc8eda6e2b4f_user_state.py
