[tool.poetry]
name = "tg-budget"
version = "0.1.0"
description = ""
authors = ["Andrei Fominykh <andreyfominykh@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
pydantic = "^2.9.2"
httpx = "^0.27.2"
environs = "^11.0.0"
asyncpg = "^0.30.0"
alembic = "^1.14.0"
rq = "^2.0.0"
redis = "^5.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
